--- a/forum/templates/forum/comment_form.html
+++ b/forum/templates/forum/comment_form.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <fieldset>
                 <legend>
-                    Add an comment:
+                    Comment:
                 </legend>
                 {{form.as_p}}
 
