--- a/homepage/templates/homepage/project_detail.html
+++ b/homepage/templates/homepage/project_detail.html
@@ -16,6 +16,7 @@
     </div>
     <div class='mycontainer'>
     <div class='detailpagesmallcontainer'>
+        <div class="forms">
         <h3>Groups</h3>
         <div class='detailtable'>
             <br>
@@ -64,6 +65,7 @@
                 <br><br>
             {%endfor%}
             </div>
+        </div>
         </div>
         <div class='detailpagesmallcontainer'>
             <h3>All Students</h3>
