--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -17,7 +17,7 @@
           <div class="userforumcard card {{post.user.userinfo.color}}">
             <div class="card-content flow-text white-text">
               <a href="{% url 'forum:comment_create' post.pk %}" class="left btn-floating halfway-fab waves-effect waves-light green accent-2"><i class="material-icons">insert_comment</i></a>
-              <p class='flow-text'>{{post.content}}</p>
+              <p class=''>{{post.content}}</p>
               {%if post.image %}
                 <a href="{%url 'forum:make_fullscreen' post.pk%}">
                   <img src="{{ post.image_thumbnail.url}}" alt="{{ post.content }}">
@@ -99,6 +99,7 @@
 
       <div  class="row">
           <form method="POST" class='input-field col s6 offset-s3' enctype='multipart/form-data'>
+            <div class="forms">
               {% csrf_token %}
               <fieldset>
                   <legend>
@@ -111,8 +112,11 @@
                   <i class="material-icons right">send</i>
                 </button>
               <br><br>
+            </div>
           </form>
-
+          </form>
+        </div>
+</div>
       </div>
       <script type="text/javascript">
           document.getElementById('forumcontainer').scrollBy(0, 100000);
