--- a/to_do/templates/to_do/to_do_confirm_delete.html
+++ b/to_do/templates/to_do/to_do_confirm_delete.html
@@ -2,15 +2,16 @@
 
 {% block content %}
 
-    <nav>
-        <div class="nav-wrapper">
-          <div class="col s12 {{user.userinfo.color}}">
-            <a href="{% url 'to_do:index' %}" class="breadcrumb">{{user.userinfo.current_group}}</a>
-            <a href="{% url 'to_do:user_to_do_list' %}" class="breadcrumb">{{ user.username }}</a>
-            <a href="{% url 'to_do:to_do_create' %}" class="breadcrumb">Add a to-do</a>
-          </div>
+       <nav>
+        <div class="nav-wrapper {{user.userinfo.color}}">
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="{% url 'to_do:index' %}">{{user.userinfo.current_group}}</a></li>
+            <li><a href="{% url 'to_do:user_to_do_list' %}">{{ user.username }}</a></li>
+            <li><a href="{% url 'to_do:to_do_create' %}">Add a to-do</a></li>
+          </ul>
         </div>
       </nav>
+
         <form class='center-align' method='POST'>
             {% csrf_token %}
             <div class="input-field col s6 offset-s3 center">
