--- a/to_do/templates/to_do/user_to_dos.html
+++ b/to_do/templates/to_do/user_to_dos.html
@@ -2,25 +2,23 @@
 
 {% block content%}
 
-      <nav>
-        <div class="nav-wrapper">
-          <div class="col s12 {{user.userinfo.color}}">
-            <a href="{% url 'to_do:index' %}" class="breadcrumb">{{user.userinfo.current_group}}</a>
-            <a href="{% url 'to_do:user_to_do_list' %}" class="breadcrumb">{{ user.username }}</a>
-            <a href="{% url 'to_do:to_do_create' %}" class="breadcrumb">Add a to-do</a>
-          </div>
+       <nav>
+        <div class="nav-wrapper {{user.userinfo.color}}">
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="{% url 'to_do:index' %}">{{user.userinfo.current_group}}</a></li>
+            <li><a href="{% url 'to_do:user_to_do_list' %}"><div style="font-weight: bold;">{{ user.username }}</div></a></li>
+            <li><a href="{% url 'to_do:to_do_create' %}">Add a to-do</a></li>
+          </ul>
         </div>
       </nav>
 
-
-      <div class="mycontainer">
-        <div class='smallcontainer'>
+      <div class="mycontainer row">
+        <div class='smallcontainer col s12 m12 l4 '>
           <div class='todoheading'>
             <h3 style="display: inline-block;"> To Do </h3>
             <a style="margin: 10px 10px 10px 10px;" href="{% url 'to_do:to_do_create'  %}" class="btn-floating waves-effect waves-light green accent-2"><i class="material-icons">add</i></a>
           </div>
-
-         {% for post in user_posts %}
+          {% for post in user_posts %}
             <div class = 'column'>
                 <div class="todocard card grey lighten-1">
                   <div class="card-content white-text">
@@ -38,7 +36,7 @@
         {%endfor%}
             </div>
 
-            <div class='smallcontainer'>
+            <div class='smallcontainer col s12 m12 l4 '>
           <h3>In Progress</h3>
 
          {% for post in user_posts_in_progress %}
@@ -59,7 +57,7 @@
         {%endfor%}
             </div>
 
-             <div class='smallcontainer'>
+             <div class='smallcontainer col s12 m12 l4 '>
           <h3>Completed</h3>
 
          {% for post in user_posts_completed %}
@@ -78,7 +76,6 @@
             </div>
 
       </div>
-
 
 
 {% endblock %}
